# fastapi-service-base

./: .env.example  .env.production  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
