[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-service-base"
version = "0.1.0"
description = "A FastAPI service base project."
authors = [{ name = "Jero Sanchez", email = "dev@jerosanchez.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[all]==0.127.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pylint==4.0.4",
    "black==25.12.0",
]

[tool.setuptools.packages.find]
where = ["app"]
